2000-08-15  David Byers  <davby@ida.liu.se>

	* commands2.el (kom-set-unread): Immediately go to
	lyskom-current-conf if that is the conf being changed.

	* prefetch.el (lyskom-fetch-start-of-map): Fix off-by-one error in
	map fetching.

	* commands2.el (kom-set-unread): Use lyskom-fetch-start-of-map to
	block until we see a text in the map of the conference we are
	setting unread in.

	* commands1.el (lyskom-add-member-answer): Block until we get at
	least one text in the map or have read the entire map.
	(lyskom-add-membership): Add parameter BLOCKING to allow blocking
	until we have read at least one text in the map.

	* prefetch.el (lyskom-fetch-start-of-map): New function.

	* lyskom-rest.el (lyskom-check-go-to-conf): Start prefetch when
	converting passive membership to active membership.

2000-08-14  David Byers  <davby@ida.liu.se>

	* services.el (lyskom-server-call): Return the ref-no of the call
	just made.

	* commands1.el (kom-list-created-conferences): Attempt to cancel
	calls still in the pipe before quitting.

	* services.el (lyskom-cancel-call): New function.

	* clienttypes.el (lyskom-queue-set-data): New function.

	* compatibility.el (nil): Set lyskom-server-coding-system
	according to the value of enable-multibyte-characters in Gnu Emacs
	to make stuff work better in multibyte-disabled Gnu Emacsen.

	* commands1.el (kom-list-conferences): Wait for membership to be
	read.
	(kom-list-created-conferences): Wait for membership to be read.
	(lyskom-list-conf-membership-char): New function to print
	membership char in name lists.
	(lyskom-list-created-conferences-2): Use it.
	(lyskom-list-conf-print): Use it.
	(kom-list-created-conferences): Make it possible to quit with C-g.

Fri Aug 11 17:34:39 2000  David Byers  <davby@sen2.ida.liu.se>

	* Release av 0.46-BETA-L

2000-08-11  David Byers  <davby@ida.liu.se>

	* option-edit.el (lyskom-file-widget): Fixed bug so that help
	button appears on the same line as the file name.
